Revision history for App-Anchr

{{$NEXT}}

0.0.17 2017-02-26T14:33:14Z
    - Add --restrict for `anchr orient`
    - Skip anchors match to multiple parts of a long read
    - Delete edges with different strands
    - Default prefix 'read' for `anchr dazzname`

0.0.16 2017-02-25T08:44:29Z
    - `anchr restrict`
    - Rename ovlpreplace to replace

0.0.15 2017-02-25T08:06:14Z
    - `anchr ovlpreplace`
    - Limit max distance of linked anchors

0.0.14 2017-02-24T09:45:25Z
    - `anchr group`
    - Add serial2name() to Common.pm
    - Add GraphViz to dependancies

0.0.13 2017-02-23T15:49:51Z
    - `anchr cover`
    - Find tempdir easier

0.0.12 2017-02-22T17:56:27Z
    - `anchr orient`
    - Use tempdir as basename of dazz db

0.0.11 2017-02-21T08:54:07Z
    - `anchr overlap2`: calling `daligner` to detect overlaps between two files
    - Document paralogs
    - Switch to k-unitigs
    - Add --start for dazzname
    - Use `faops replace` to rename headers in FA files

0.0.10 2017-02-17T08:38:42Z
    - Discard any reads with subs
    - Use superReadSequences.fasta or k_unitigs.fasta

0.0.9 2017-02-14T20:59:08Z
    - Install quorum and picard via Linuxbrew
    - Move docs from sra
    - Add quast in QA section
    - `--noscythe` for trim
    - Change quorum parameters
    - Turn raw data stat to tables

0.0.8 2017-02-11T21:48:05Z
    - `anchr overlap`
    - Merge stat 3 and 4 in `sr_stat.sh`
    - exec_cmd() in App::Anchr::Common
    - Remove dependencies on ~/Scripts/sra

0.0.7 2017-02-11T05:33:40Z
    - Keep original orders in `anchr dazzname`
    - Merge stat 1 and 2 in `sr_stat.sh`

0.0.6 2017-02-11T00:57:42Z
    - `anchr superreads`

0.0.5 2017-02-10T18:19:39Z
    - `anchr trim`

0.0.4 2017-02-09T02:02:06Z
    - `anchr dazzname`
    - `anchr show2ovlp`

0.0.3 2017-02-08T22:59:37Z
    - `anchr dep`

0.0.2 2017-02-08T21:11:05Z
    - Setup Travis

0.0.1 2017-02-08T20:17:24Z
    - Initial version
    - `anchr help` works
    - No real commands